refactor: move sample JSON to main resources